2018.8/_sources/plugins/available/longitudinal/first-differences.txt
first-differences: Compute first differences or difference from baseline between sequential states
==================================================================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime longitudinal first-differences [OPTIONS]

     Calculates first differences in "metric" between sequential states for
     samples collected from individual subjects sampled repeatedly at two or
     more states. First differences can be performed on a metadata column
     (including artifacts that can be input as metadata) or a feature in a
     feature table. Outputs a data series of first differences for each
     individual subject at each sequential pair of states, labeled by the
     SampleID of the second state (e.g., paired differences between time 0 and
     time 1 would be labeled by the SampleIDs at time 1). This file can be used
     as input to linear mixed effects models or other longitudinal or diversity
     methods to compare changes in first differences across time or among
     groups of subjects. Also supports differences from baseline (or other
     static comparison state) by setting the "baseline" parameter.

   Options:
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. Sample
                                     metadata file containing
                                     individual_id_column.  [required]
     --p-state-column TEXT           Metadata column containing state (time)
                                     variable information.  [required]
     --p-individual-id-column TEXT   Metadata column containing IDs for
                                     individual subjects.  [required]
     --p-metric TEXT                 Numerical metadata or artifact column to
                                     test.  [required]
     --p-replicate-handling [random|error|drop]
                                     Choose how replicate samples are handled. If
                                     replicates are detected, "error" causes
                                     method to fail; "drop" will discard all
                                     replicated samples; "random" chooses one
                                     representative at random from among
                                     replicates.  [default: error]
     --p-baseline FLOAT              A value listed in the state_column metadata
                                     column against which all other states should
                                     be compared. Toggles calculation of static
                                     differences instead of first differences
                                     (which are calculated if no value is given
                                     for baseline). If a "baseline" value is
                                     provided, sample differences at each state
                                     are compared against the baseline state,
                                     instead of the previous state. Must be a
                                     value listed in the state_column.
                                     [optional]
     --i-table ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     Feature table to optionally use for
                                     computing first differences.  [optional]
     --o-first-differences ARTIFACT PATH SampleData[FirstDifferences]
                                     Series of first differences.  [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.longitudinal.methods import first_differences

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Compute first differences or difference from baseline between sequential
   states

   Calculates first differences in "metric" between sequential states for
   samples collected from individual subjects sampled repeatedly at two or
   more states. First differences can be performed on a metadata column
   (including artifacts that can be input as metadata) or a feature in a
   feature table. Outputs a data series of first differences for each
   individual subject at each sequential pair of states, labeled by the
   SampleID of the second state (e.g., paired differences between time 0 and
   time 1 would be labeled by the SampleIDs at time 1). This file can be used
   as input to linear mixed effects models or other longitudinal or diversity
   methods to compare changes in first differences across time or among groups
   of subjects. Also supports differences from baseline (or other static
   comparison state) by setting the "baseline" parameter.

   Parameters
   ----------
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   state_column : Str
       Metadata column containing state (time) variable information.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   metric : Str
       Numerical metadata or artifact column to test.
   replicate_handling : Str % Choices({'drop', 'error', 'random'}), optional
       Choose how replicate samples are handled. If replicates are detected,
       "error" causes method to fail; "drop" will discard all replicated
       samples; "random" chooses one representative at random from among
       replicates.
   baseline : Float, optional
       A value listed in the state_column metadata column against which all
       other states should be compared. Toggles calculation of static
       differences instead of first differences (which are calculated if no
       value is given for baseline). If a "baseline" value is provided, sample
       differences at each state are compared against the baseline state,
       instead of the previous state. Must be a value listed in the
       state_column.
   table : FeatureTable[RelativeFrequency], optional
       Feature table to optionally use for computing first differences.

   Returns
   -------
   first_differences : SampleData[FirstDifferences]
       Series of first differences.</pre>
       </div>
     </div>
   </div>